crates/runtime/tests/cluster/snapshots/integration__cluster__distributed_cayenne_catalog__ddl_select_after_reinsert.snap
---
source: crates/runtime/tests/cluster/distributed_cayenne_catalog.rs
expression: plan
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                    |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: tcat.myschema.users.id, CAST(tcat.myschema.users.name AS LargeUtf8) AS name, CAST(tcat.myschema.users.email AS LargeUtf8) AS email, tcat.myschema.users.age |
|               |   Sort: tcat.myschema.users.id ASC NULLS LAST                                                                                                                           |
|               |     TableScan: tcat.myschema.users projection=[id, name, email, age]                                                                                                    |
| physical_plan | ProjectionExec: expr=[id@0 as id, CAST(name@1 AS LargeUtf8) as name, CAST(email@2 AS LargeUtf8) as email, age@3 as age]                                                 |
|               |   RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1, maintains_sort_order=true                                                                       |
|               |     SortExec: expr=[id@0 ASC NULLS LAST], preserve_partitioning=[false]                                                                                                 |
|               |       CooperativeExec                                                                                                                                                   |
|               |         BytesProcessedExec                                                                                                                                              |
|               |           FlightSqlExec sql=SELECT id, name, email, age FROM tcat.myschema.users                                                                                        |
|               |                                                                                                                                                                         |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
