crates/runtime/tests/cluster/snapshots/integration__cluster__distributed_cayenne_catalog__ddl_select_deleted_row.snap
---
source: crates/runtime/tests/cluster/distributed_cayenne_catalog.rs
expression: plan
---
+---------------+-------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                  |
+---------------+-------------------------------------------------------------------------------------------------------+
| logical_plan  | Filter: tcat.myschema.users.id = Int64(3)                                                             |
|               |   TableScan: tcat.myschema.users projection=[id], partial_filters=[tcat.myschema.users.id = Int64(3)] |
| physical_plan | FilterExec: id@0 = 3                                                                                  |
|               |   RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                |
|               |     CooperativeExec                                                                                   |
|               |       BytesProcessedExec                                                                              |
|               |         FlightSqlExec sql=SELECT id FROM tcat.myschema.users WHERE (("id" = 3))                       |
|               |                                                                                                       |
+---------------+-------------------------------------------------------------------------------------------------------+
