crates/runtime/tests/cluster/snapshots/integration__cluster__distributed_cayenne_catalog__ddl_select_single_after_update.snap
---
source: crates/runtime/tests/cluster/distributed_cayenne_catalog.rs
expression: plan
---
+---------------+--------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                               |
+---------------+--------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: tcat.myschema.users.id, CAST(tcat.myschema.users.name AS LargeUtf8) AS name, tcat.myschema.users.age   |
|               |   Filter: tcat.myschema.users.id = Int64(1)                                                                        |
|               |     TableScan: tcat.myschema.users projection=[id, name, age], partial_filters=[tcat.myschema.users.id = Int64(1)] |
| physical_plan | ProjectionExec: expr=[id@0 as id, CAST(name@1 AS LargeUtf8) as name, age@2 as age]                                 |
|               |   FilterExec: id@0 = 1                                                                                             |
|               |     RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                           |
|               |       CooperativeExec                                                                                              |
|               |         BytesProcessedExec                                                                                         |
|               |           FlightSqlExec sql=SELECT id, name, age FROM tcat.myschema.users WHERE (("id" = 1))                       |
|               |                                                                                                                    |
+---------------+--------------------------------------------------------------------------------------------------------------------+
