crates/runtime/tests/cluster/snapshots/integration__cluster__distributed_cayenne_catalog__join_aggregation_after_delete.snap
---
source: crates/runtime/tests/cluster/distributed_cayenne_catalog.rs
expression: __plan
snapshot_kind: text
---
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Federated                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
|               |  Projection: CAST(p.name AS LargeUtf8) AS name, total_qty                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
|               |   Sort: p.name ASC NULLS LAST                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
|               |     Projection: p.name, sum(o.quantity) AS total_qty                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
|               |       Aggregate: groupBy=[[p.name]], aggr=[[sum(o.quantity)]]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
|               |         Inner Join:  Filter: o.product_id = p.product_id                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
|               |           SubqueryAlias: o                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
|               |             SubqueryAlias: jcat.store.orders                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
|               |               TableScan: jcat.store.orders projection=[product_id, quantity]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
|               |           SubqueryAlias: p                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
|               |             SubqueryAlias: jcat.store.products                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
|               |               TableScan: jcat.store.products projection=[product_id, name]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| physical_plan | SortExec: expr=[name@0 ASC NULLS LAST], preserve_partitioning=[false]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
|               |   SchemaCastScanExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
|               |     CooperativeExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
|               |       BytesProcessedExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
|               |         VirtualExecutionPlan name=flightsql compute_context=endpoint=[endpoint] base_sql=SELECT CAST(p."name" AS TEXT) AS "name", total_qty FROM (SELECT "name", sum(o.quantity) AS total_qty FROM jcat.store.orders AS orders INNER JOIN jcat.store.products AS products ON (o.product_id = p.product_id) GROUP BY p."name" ORDER BY "name" ASC NULLS LAST) rewritten_sql=SELECT CAST(products."name" AS TEXT) AS "name", total_qty FROM (SELECT "name", sum(orders.quantity) AS total_qty FROM jcat.store.orders AS orders INNER JOIN jcat.store.products AS products ON (orders.product_id = products.product_id) GROUP BY products."name") ORDER BY "name" ASC NULLS LAST |
|               |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
