crates/runtime/tests/cluster/snapshots/integration__cluster__distributed_cayenne_catalog__merge_composite_no_cross_product_after.snap
---
source: crates/runtime/tests/cluster/distributed_cayenne_catalog.rs
assertion_line: 1326
expression: plan
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: CAST(mxp.s.inventory.region AS LargeUtf8) AS region, CAST(mxp.s.inventory.sku AS LargeUtf8) AS sku, mxp.s.inventory.qty |
|               |   Sort: mxp.s.inventory.region ASC NULLS LAST, mxp.s.inventory.sku ASC NULLS LAST                                                   |
|               |     TableScan: mxp.s.inventory projection=[region, sku, qty]                                                                        |
| physical_plan | ProjectionExec: expr=[CAST(region@0 AS LargeUtf8) as region, CAST(sku@1 AS LargeUtf8) as sku, qty@2 as qty]                         |
|               |   RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1, maintains_sort_order=true                                   |
|               |     SortExec: expr=[region@0 ASC NULLS LAST, sku@1 ASC NULLS LAST], preserve_partitioning=[false]                                   |
|               |       CooperativeExec                                                                                                               |
|               |         BytesProcessedExec                                                                                                          |
|               |           FlightSqlExec sql=SELECT region, sku, qty FROM mxp.s.inventory                                                            |
|               |                                                                                                                                     |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------+
